--- a/BrainStormInActionDB/appsettings.json
+++ b/BrainStormInActionDB/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DevConnection" : "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BrainStormInActionDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
